
2015-08-23 - TAQ
	xerces-c/, eigen/ - Removed bundled xerces and eigen distributions.  They're common-ish libraries, and are not hard to install, particularly for a developer.  Having them in our distribution just bloats things unnecessarily.  The libGLw subpackage will stay for the time being, since it seems a bit less common (since everybody hates Xt nowadays).

2015-09-06 - TAQ
	server/classes/modules/db.h, server/classes/modules/db.cc, server/classes/modules/mysql.cc, server/classes/modules/pgsql.cc - Added C-linked wrappers, so we can continue to use the library without having to populate a vtable (in some unportable way).
	server/classes/modules/language.h, server/classes/language.cc - Added C-linked wrappers for these too.

2015-09-07 - TAQ
	client/cache.h - It turned out that we didn't have any real way to insert things into the cache.  Instead of throwing an exception on a missing element, we'll now follow the lead of the C++ unordered_map object, and return a default object reference out of the index operator method, suitable for assignment.

2015-11-01 - TAQ
	server/classes/basesock.h, server/classes/basesock.cc, server/classes/listensock.h, server/classes/listensock.cc - Split the listen_socket out into its own files, because it simplified testing quite a bit.

2015-11-13 - TAQ
	server/classes/game_obj.h, server/classes/game_obj.cc, server/classes/motion.h, server/classes/motion.cc - It didn't make a whole lot of sense to have the game object and motion objects separate - the game object didn't really *do* anything.  So they're combined into the game object now.
	server/classes/update_pool.h, server/classes/update_pool.cc - In trying to test the various parts of the zone, we discovered that there needed to be way too much scaffolding in place (the zone, the socket list, users, a database, etc.), so we've started cleaning things up, and (hopefully) reducing dependencies.