@@ -1,6 +1,6 @@
 /* zone.h                                                  -*- C++ -*-
  *   by Trinity Quirk <tquirk@ymb.net>
- *   last updated 19 Nov 2015, 07:36:01 tquirk
+ *   last updated 28 Nov 2015, 09:59:44 tquirk
  *
  * Revision IX game server
  * Copyright (C) 2015  Trinity Annabelle Quirk
@@ -115,10 +115,7 @@ class Zone
     void start(void);
     void stop(void);
 
-    /* Interface to the action pool */
-    virtual void add_action_request(uint64_t, packet *, size_t);
-
-    virtual void execute_action(Control *, action_request&, size_t);
+    virtual int execute_action(Control *, action_request&, size_t);
 };
 
 #endif /* __INC_ZONE_H__ */
